RESOLVED FIXED117989
Fixes a typo in renderTextDecorationFlagsToCSSValue
https://bugs.webkit.org/show_bug.cgi?id=117989
Summary Fixes a typo in renderTextDecorationFlagsToCSSValue
Bruno Abinader
Reported 2013-06-25 06:21:02 PDT
Created attachment 205396 [details] Patch Return value should be PassRefPtr instead of RefPtr. Backported from Blink: https://src.chromium.org/viewvc/blink?view=rev&revision=152994 --- 2 files changed, 17 insertions(+), 1 deletion(-)
Attachments
Patch (1.49 KB, patch)
2013-06-25 06:21 PDT, Bruno Abinader
no flags
Patch (1.54 KB, patch)
2013-06-25 06:22 PDT, Bruno Abinader
no flags
Bruno Abinader
Comment 1 2013-06-25 06:22:39 PDT
Gyuyoung Kim
Comment 2 2013-06-25 06:26:13 PDT
Comment on attachment 205397 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-06-25 08:25:19 PDT
Comment on attachment 205397 [details] Patch Clearing flags on attachment: 205397 Committed r151964: <http://trac.webkit.org/changeset/151964>
WebKit Commit Bot
Comment 4 2013-06-25 08:25:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.