Fixes a typo in renderTextDecorationFlagsToCSSValue https://bugs.webkit.org/show_bug.cgi?id=117989

Patch by Bruno de Oliveira Abinader <brunoabinader@gmail.com> on 2013-06-25
Reviewed by Gyuyoung Kim.

Return value should be PassRefPtr instead of RefPtr.

Backported from Blink:
https://src.chromium.org/viewvc/blink?view=rev&revision=152994

No new tests, no behavior change.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::renderTextDecorationFlagsToCSSValue):

Canonical link: https://commits.webkit.org/136111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151964 268f45cc-cd09-0410-ab3c-d52691b4dbfc